# tenken-training

./: .gitignore  README.md  cspell.json
.ionide/: symbolCache.db
Tenken.WebApi/Controllers/: HelloController.cs
Tenken.WebApi/Properties/: launchSettings.json
actix-server/: Cargo.toml  Dockerfile  cspell.json
actix-server/src/: main.rs
actix-server/src/actors/: mod.rs  tenken.rs  transactor.rs  writer.rs
actix-server/src/actors/transactor/: entry.rs  file_handle.rs  indexed_file_handle.rs  mod.rs  partition.rs  payload.rs  transactor.rs
actix-server/src/messages/: latest_requested.rs  mod.rs  write_at_requested.rs  write_requested.rs
actix-server/src/services/: hello.rs  latest.rs  mod.rs  write.rs
actix-web-server/: .gitignore  Cargo.toml  Dockerfile
actix-web-server/src/: db.rs  dto.rs  main.rs  message.rs  writer.rs
async-std/: Cargo.toml
async-std/src/: main.rs
fiber-server/: Dockerfile  go.mod  main.go
go-server/: main.go
lithium-server/: main.cc
may/: Cargo.toml
may/src/: main.rs
mio/: Cargo.toml
mio/src/: main.rs
sharpdb/: Program.fs
sharpdb/Properties/: launchSettings.json
stakker/: Cargo.toml
stakker/src/: main.rs
tenken/: Cargo.toml
tenken/src/: db.rs  main.rs  stakker.rs  tick.rs  writer.rs
tokio-web-server/: Cargo.toml
tokio-web-server/src/: main.rs
wrk-tests/: kv.lua  payload.json  post.lua  put.lua
