[package]
name = "actix-web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix = "0.10.0"
fxhash = "0.2.1"
serde_json = "1.0"
serde = "1.0"
chashmap = "2.2.2"
thiserror = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
